# CSC121

./: .gitignore  Family.jpg.jp2  P4_styles.css  Project4.html  README.md  index.html
Game Of Life/: CMakeLists.txt  GameofLife.cpp  Info.plist
Project_4/: Drinking Age Calculator.py  P4_styles.css  Project4.html  WillisFormula  catlanSequence.py
Project_4/Project_5/: GameOfLife  GameOfLife.cpp
Project_4/Project_5/GameOfLife.dSYM/Contents/Resources/DWARF/: GameOfLife
Project_4/Project_5/GameOfLife.dSYM/Contents/Resources/Relocations/aarch64/: GameOfLife.yml
Project_5/: GameOfLife
